--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-dev-client": "~5.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
